{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 31,
  "lineage": "8040becd-55c7-57b2-6460-66dfcb3bb159",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e586a534ed15713",
            "domain": "vpc",
            "id": "eipalloc-00e586a534ed15713",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-29-250-36.compute-1.amazonaws.com",
            "public_ip": "100.29.250.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "nat-eip",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:internet-gateway/igw-02c13b41c0889278f",
            "id": "igw-02c13b41c0889278f",
            "owner_id": "276671279137",
            "tags": {
              "Name": "app1_IG",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "app1_IG",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e586a534ed15713",
            "connectivity_type": "public",
            "id": "nat-0b105664a809343ab",
            "network_interface_id": "eni-06137884f53f9f37f",
            "private_ip": "10.112.1.71",
            "public_ip": "100.29.250.36",
            "subnet_id": "subnet-03c844492a6045b9f",
            "tags": {
              "Name": "nat-gateway",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "nat-gateway",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:route-table/rtb-05c57b3517e590f56",
            "id": "rtb-05c57b3517e590f56",
            "owner_id": "276671279137",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b105664a809343ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:route-table/rtb-0e315ee556c4d8e25",
            "id": "rtb-0e315ee556c4d8e25",
            "owner_id": "276671279137",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c13b41c0889278f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe36532adcd113ac",
            "route_table_id": "rtb-05c57b3517e590f56",
            "subnet_id": "subnet-0c6d019ba353934b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f73f4f5223730e8",
            "route_table_id": "rtb-05c57b3517e590f56",
            "subnet_id": "subnet-0c6fb107b893c69a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf3f87971aefbb94",
            "route_table_id": "rtb-05c57b3517e590f56",
            "subnet_id": "subnet-0337b657e1e723487"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1c",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b8d0bfc9596536c",
            "route_table_id": "rtb-0e315ee556c4d8e25",
            "subnet_id": "subnet-03c844492a6045b9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d75314e996b1a0d3",
            "route_table_id": "rtb-0e315ee556c4d8e25",
            "subnet_id": "subnet-0adb0d19946d012a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fa62c23a372202c",
            "route_table_id": "rtb-0e315ee556c4d8e25",
            "subnet_id": "subnet-03cb7562b1f569fd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1c",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app1-sg01-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:security-group/sg-0bad35ca393ea11ea",
            "description": "Allow HTTP from ALB to EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bad35ca393ea11ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app1-sg01-servers",
            "name_prefix": "",
            "owner_id": "276671279137",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-sg01-servers",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "app1-sg01-servers",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app1-sg02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:security-group/sg-0af539aecad0e558a",
            "description": "Allow HTTP/HTTPS from the internet to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af539aecad0e558a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app1-sg02-LB01",
            "name_prefix": "",
            "owner_id": "276671279137",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-sg02-LB01",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "app1-sg02-LB01",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:subnet/subnet-0c6d019ba353934b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.112.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6d019ba353934b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "276671279137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:subnet/subnet-0c6fb107b893c69a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.112.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6fb107b893c69a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "276671279137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:subnet/subnet-0337b657e1e723487",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.112.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0337b657e1e723487",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "276671279137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:subnet/subnet-03c844492a6045b9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.112.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c844492a6045b9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "276671279137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:subnet/subnet-0adb0d19946d012a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.112.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adb0d19946d012a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "276671279137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:subnet/subnet-03cb7562b1f569fd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.112.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cb7562b1f569fd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "276671279137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "vpc_id": "vpc-02c90c071f50f0460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:276671279137:vpc/vpc-02c90c071f50f0460",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.112.0.0/16",
            "default_network_acl_id": "acl-00e2b1861879497a2",
            "default_route_table_id": "rtb-0349d1780d915e089",
            "default_security_group_id": "sg-0bb2661bd698b53a8",
            "dhcp_options_id": "dopt-0bfd9608cea4a3494",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02c90c071f50f0460",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0349d1780d915e089",
            "owner_id": "276671279137",
            "tags": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            },
            "tags_all": {
              "Name": "main-vpc",
              "Owner": "Tawan",
              "Planet": "terraform-training",
              "Service": "dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}